Jan 22 2009	N.W	<pi3orama@gmail.com>
	* 0.041
	* Automatically search when hiting "enter";
	* Automatically display after autocompletion.
	Thanks to <heldersepu@gmail.com>

Jan 12 2009	N.W	<pi3orama@gmail.com>
	* 0.04
	* Add a "Force update" option, force redownload old tiles.

Sep 27 2008	N.W	<pi3orama@gmail.com>
	* 0.03
	* Detect google map version string before download

Jun 23 2008	N.W	<pi3orama@gmail.com>
	* 0.02 hotfix
	* google url changed again

Mar 20 2008	N.W	<pi3orama@gmail.com>
	
	* 0.02
	* use multithread downloader while online
	* fix a bug: when hit 'OK' button, doesn't change viewport


Mar 02 2008	N.W	<pi3orama@gmail.com>

	* 0.01 hotfix 2
	* Google guys changed their tile url...

Jan 04 2008	N.W	<pi3orama@gmail.com>

	* 0.01 hotfix
	* Fix a keyevent problem in windows

Jan 02 2008	N.W	<pi3orama@gmail.com>

	* Initial 0.01
