@@ -1,3 +1,8 @@
+Jan 28 2009	N.W	<pi3orama@gmail.com>
+	* SVN head
+	* Replace some 'print' error messages by dialogbox.
+	* See http://code.google.com/p/gmapcatcher/issues/detail?id=7
+
 Jan 22 2009	N.W	<pi3orama@gmail.com>
 	* 0.041
 	* Automatically search when hiting "enter";
